--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   transform: scale(1.2);
 }
 
-.scroll-downs {
+.scroll-btn {
   width: 34px;
   height: 55px;
 }
@@ -93,18 +93,14 @@ body {
 }
 
 .about-page {
-  height: calc(100vh - var(--footer-height));
-  background-color: white;
+  height: 100vh;
+  background-color: rgb(66, 63, 63);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
 
-.visible {
-  display: block;
-}
-
-.hidden {
-  display: none;
+.about-page .scroll-btn {
+  margin-top: 30px;
 }
