--- a/src/App.css
+++ b/src/App.css
@@ -6,31 +6,47 @@ body {
 }
 
 .outer-container {
-  height: calc(100vh - var(--footer-height));
-  background-color: rgb(66, 63, 63);
+  height: 100vh;
+  background-image: linear-gradient(
+    to right,
+    #4f4f4f,
+    #646364,
+    #7b7779,
+    #948c8e,
+    #ada1a1
+  );
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
 
+.outer-container .scroll-btn {
+  margin-bottom: 60px;
+}
+
 .terminal {
   width: 60%;
-  height: 800px;
-  margin-top: 100px;
+  height: 65%;
+  margin-top: 5%;
 }
 
 .footer {
   height: var(--footer-height);
-  background-color: rgb(66, 63, 63);
   width: 100%;
-  margin: 0;
   position: fixed;
   left: 0;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: background-color 0.3s;
+  transition: box-shadow 0.3s;
+}
+
+.footer:hover {
+  background-color: #413e3e;
+  box-shadow: 2px 2px 15px #413e3e;
 }
 
 .description {
@@ -94,22 +110,30 @@ body {
 
 .about-page {
   height: 100vh;
-  background-color: rgb(66, 63, 63);
+  background-image: linear-gradient(
+    to right,
+    #4f4f4f,
+    #646364,
+    #7b7779,
+    #948c8e,
+    #ada1a1
+  );
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .about-page .scroll-btn {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .about-container {
-  margin-top: 100px;
+  margin-top: 50px;
   width: 60%;
-  height: 800px;
-  background-color: white;
+  height: 600px;
+  background-color: #413e3e;
   display: flex;
+  box-shadow: 5px 5px 15px #413e3e;
 }
 
 .images-container {
@@ -117,11 +141,13 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  /* background: red; */
+  background-color: #;
+  border-right: 1px #212121 solid;
 }
 
 .content-container {
   width: 50%;
   height: 100%;
-  background: black;
+  background-color: #413e3e;
+  border-left: 1px #212121 solid;
 }
