--- a/src/App.css
+++ b/src/App.css
@@ -25,12 +25,6 @@ body {
   margin-bottom: 60px;
 }
 
-.terminal {
-  width: 60%;
-  height: 65%;
-  margin-top: 5%;
-}
-
 .footer {
   height: var(--footer-height);
   width: 100%;
@@ -141,7 +135,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #;
+  background-color: #413e3e;
   border-right: 1px #212121 solid;
 }
 
