--- a/src/Terminal.css
+++ b/src/Terminal.css
@@ -17,8 +17,10 @@
 
 .welcome-message .welcome-message-text {
   display: inline;
-  font-weight: bold;
-  font-size: 16px;
+  /* font-weight: bold; */
+  font-size: 18px;
+  letter-spacing: 1px;
+  font-family: 'Monoid';
 }
 
 .welcome-message .cursor {
@@ -39,16 +41,45 @@
   }
 }
 
-.description .welcome-message-text {
-  margin: 0px;
-  font-size: 18px;
-  letter-spacing: 1px;
-  font-family: 'Monoid';
-}
 .prompt {
   display: flex;
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 4px;
+  font-size: 17px;
+  font-family: 'Monoid';
+}
+
+.prompt-label {
+  color: white;
+}
+
+.prompt-input {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  color: rgb(0, 187, 0);
+}
+
+.prompt-input input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: rgb(0, 187, 0);
+  width: 100%;
+  flex: 1;
+  font-size: 16px;
+  word-wrap: break-word;
+}
+
+.prompt-input input::selection {
+  color: rgb(0, 187, 0);
+}
+
+.current-output {
+  color: rgb(0, 187, 0);
+  font-size: 17px;
+  font-family: 'Monoid';
 }
 
 .footer {
