--- a/src/Terminal.css
+++ b/src/Terminal.css
@@ -63,6 +63,11 @@
   color: white;
 }
 
+.prompt-label .current-dir {
+  color: teal;
+  font-weight: bold;
+}
+
 .prompt-input {
   flex: 1;
   display: flex;
