--- a/src/Terminal.css
+++ b/src/Terminal.css
@@ -1,11 +1,17 @@
 :root {
-  --footer-height: 50px;
+  --footer-height: 40px;
+  --footer-margin: 10px;
+}
+
+.outer-container {
+  background-color: black;
 }
 
 .terminal {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - var(--footer-height) - var(--footer-margin));
   background-color: black;
+  overflow-y: auto;
 }
 
 .terminal-header {
@@ -26,7 +32,6 @@
 
 .welcome-message .welcome-message-text {
   display: inline;
-  /* font-weight: bold; */
   font-size: 18px;
   letter-spacing: 1px;
   font-family: 'Monoid';
@@ -104,17 +109,85 @@
   font-family: 'Monoid';
   display: flex;
   flex-direction: column;
+  gap: 7px;
+}
+
+.current-output-meter-div {
+  display: flex;
+  gap: 130px;
+}
+
+.current-output-meter-div .current-output-div-text {
+  width: 200px;
+}
+
+.meter-container {
+  display: flex;
+  width: 200px;
+  background-color: grey;
+}
+.meter-container .box {
+  width: 20%;
+  border: 1px solid white;
+}
+
+.meter-container .fill {
+  background-color: green;
+}
+
+.contact-card {
+  margin: 10px;
+  padding: 5px;
+  width: 250px;
+  height: 100px;
+  background-color: green;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.contact-card-data {
+  display: flex;
+  gap: 10px;
+  color: black;
+  font-size: 15px;
+  font-style: italic;
+}
+
+.about-section {
+  width: 900px;
+  height: 500px;
+  background-color: black;
+  margin: 10px;
+  display: flex;
+  gap: 4px;
+}
+
+.about-section .text {
+  width: 40%;
+  background-color: green;
+  color: black;
+  font-size: 15px;
+  white-space: pre-line;
+  border-radius: 5px;
+  padding: 10px 5px 5px 5px;
+}
+
+.images-container {
+  background-color: green;
+  width: 40%;
+  border-radius: 5px;
 }
 
 .footer {
   height: var(--footer-height);
+  margin-top: var(--footer-margin);
   width: 100%;
-  position: fixed;
-  left: 0;
-  bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
   transition: background-color 0.3s;
   transition: box-shadow 0.3s;
 }
