--- a/src/Terminal.css
+++ b/src/Terminal.css
@@ -22,7 +22,38 @@
   border-radius: 10px;
 }
 
+.terminal-toolbar {
+  width: 100%;
+  height: 20px;
+  display: flex;
+  gap: 7px;
+}
+
+.terminal-toolbar .toolbar-icon {
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  font-size: 6px;
+  font-weight: bold;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.close {
+  background-color: red;
+}
+.minimize {
+  background-color: yellow;
+}
+
+.collapse {
+  background-color: green;
+}
+
 .terminal-header {
+  max-width: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -37,7 +68,7 @@
 
 .welcome-message .welcome-message-text {
   display: inline;
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: 1px;
   font-family: 'Anonymous Pro';
 }
@@ -160,6 +191,29 @@
   font-style: italic;
 }
 
+.project-card {
+  margin: 10px 0px 10px 0px;
+  padding: 5px;
+  min-width: 550px;
+  min-height: 100px;
+  background-color: #00c9a7;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.project-card-data {
+  display: flex;
+  gap: 10px;
+  color: #005b44;
+  font-size: 15px;
+}
+
+.project-card-data a {
+  color: #005b44;
+}
+
 .about-section {
   width: 900px;
   min-height: 400px;
@@ -195,9 +249,9 @@
 }
 
 /* .footer:hover {
-  background-color: #413e3e;
-  box-shadow: 2px 2px 15px #413e3e;
-} */
+    background-color: #413e3e;
+    box-shadow: 2px 2px 15px #413e3e;
+  } */
 
 .description {
   margin-right: 10px;
